quick fix menu on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -343,7 +343,7 @@ body{
             height: 100vh;
             width: 180px;
             top: 0;
-            right:-200;
+            right:0;
             text-align: left;
             z-index: 2;
             transition: 1s;
